some styles was added

--- a/edit.html
+++ b/edit.html
@@ -3,13 +3,19 @@
 <head>
 	<title>Edit page</title>
 </head>
-
 <body>
-	<a href="/index.html">Home </a>
-	<input id="note-title" placeholder="Note title">
-	<textarea id="note-body" placeholder="Enter note text"></textarea>
-	<button id="remove-note">Remove note</button>
 
+	<main class="app">
+		<div class="app-wrapper">
+			<div class="app-container">
+				<a href="/index.html">Home </a>
+				<input id="note-title" placeholder="Note title">
+				<textarea id="note-body" placeholder="Enter note text"></textarea>
+				<button id="remove-note">Remove note</button>
+			</div>
+		</div>
+	</main>
+		
 	<script src="./notes-functions.js"></script>
 	<script src="./notes-edit.js" ></script>
 </body>
