--- a/edit.html
+++ b/edit.html
@@ -15,7 +15,8 @@
 			</div>
 		</div>
 	</main>
-		
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"></script>
 	<script src="./notes-functions.js"></script>
 	<script src="./notes-edit.js" ></script>
 </body>
