--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		</main>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"></script>
 		<script src="./notes-functions.js"></script>
 		<script src="./notes-app.js" ></script>
 	</body>
