--- a/edit.html
+++ b/edit.html
@@ -10,6 +10,7 @@
 			<div class="app-container">
 				<a href="/index.html">Home </a>
 				<input id="note-title" placeholder="Note title">
+				<span id="last-edited"></span>
 				<textarea id="note-body" placeholder="Enter note text"></textarea>
 				<button id="remove-note">Remove note</button>
 			</div>
