--- a/edit.html
+++ b/edit.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
 	<title>Edit page</title>
+	<link rel="stylesheet" href="./styles/css/styles.css">
 </head>
-<body>
 
-	<main class="app">
-		<div class="app-wrapper">
-			<div class="app-container">
-				<a href="/index.html">Home </a>
-				<input id="note-title" placeholder="Note title">
-				<span id="last-edited"></span>
-				<textarea id="note-body" placeholder="Enter note text"></textarea>
-				<button id="remove-note">Remove note</button>
-			</div>
-		</div>
-	</main>
+<body>
+	<div class="app">
+		<header class="app-header">
+			<a href="/index.html">Home</a>
+		</header>
+
+		<main class="app-content">
+			<input id="note-title" placeholder="Note title">
+			<span id="last-edited"></span>
+			<textarea id="note-body" placeholder="Enter note text"></textarea>
+			<button id="remove-note">Remove note</button>
+		</main>
+	</div>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"></script>
 	<script src="./notes-functions.js"></script>
