--- a/index.html
+++ b/index.html
@@ -3,32 +3,29 @@
 	<head>
 		<title>Home Page</title>
 		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-		<link rel="stylesheet" href="./css/main.css">
+		<link rel="stylesheet" href="./styles/css/styles.css">
 	</head>
 
 	<body>
-		<main class="app">
-			<div class="app-wrapper">
-				<div class="app-container app-container_top">
-					<h1 class="app-subtitle">Notes App</h1>
-	
-					<select class="app-filter" id="filter-by">
-						<option class="app-option" value="byEdited">Sort by last edited</option>
-						<option class="app-option" value="byCreated">Sort by recently created</option>
-						<option class="app-option" value="alphabetical">Sort alphabetically</option>
-					</select>
-	
-				</div>	
-				
-				<div class="app-container">
-					<h2 class="app-subtitle" >Take notes and never forget</h2>
-					<input class="app-input" id="search-text" type="text" placeholder="Filter notes">
-			
-					<div class="app-notes" id="notes"></div>
-					<button class="app-button" id="create-note">Create Note</button>
-				</div>
-			</div>
-		</main>
+
+		<div class="app">
+			<header class="app-header">
+				<h1 class="app-subtitle">Notes App</h1>
+				<select class="app-filter" id="filter-by">
+					<option class="app-option" value="byEdited">Sort by last edited</option>
+					<option class="app-option" value="byCreated">Sort by recently created</option>
+					<option class="app-option" value="alphabetical">Sort alphabetically</option>
+				</select>
+			</header>
+
+			<main class="app-main">
+				<h2 class="app-subtitle" >Take notes and never forget</h2>
+				<input class="app-input" id="search-text" type="text" placeholder="Filter notes">
+		
+				<div class="app-notes" id="notes"></div>
+				<button class="app-button" id="create-note">Create Note</button>
+			</main>
+		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"></script>
