--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 			<main class="app-content">
 				<div class="app-content__wrapper">
 					<h2 class="app-content__title" >Take notes and never forget</h2>
-					<input class="app-content__search" id="search-text" type="text" placeholder="Filter notes">
+					<label for="search-text" class="app-content__search-label">Search</label>
+					<input class="app-content__search" id="search-text" type="text" placeholder="Type here what are you looking for">
 					<div class="app-content__notes" id="notes"></div>
 					<button class="app-content__button-create" id="create-note">+ Create Note</button>
 				</div>
