--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home Page</title>
-		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+		<title>Notes app</title>
+		<link rel="shortcut icon" type="image/jpg" href="./notes-app/assets/ic_delete.svg"/>
 		<link rel="stylesheet" href="./styles/css/styles.css">
 	</head>
 
