--- a/edit.html
+++ b/edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Edit page</title>
-	<link rel="shortcut icon" type="image/jpg" href="./notes-app/assets/ic_delete.svg"/>
+	<link rel="shortcut icon" type="image/jpg" href="/notes-app/assets/ic_delete.svg"/>
 	<link rel="stylesheet" href="./styles/css/styles.css">
 </head>
 
