--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Notes app</title>
-		<link rel="shortcut icon" type="image/jpg" href="./notes-app/assets/ic_delete.svg"/>
+		<link rel="shortcut icon" type="image/jpg" href="/notes-app/assets/ic_delete.svg"/>
 		<link rel="stylesheet" href="./styles/css/styles.css">
 	</head>
 
