--- a/edit.html
+++ b/edit.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Edit page</title>
-	<link rel="shortcut icon" type="image/jpg" href="/notes-app/assets/ic_delete.svg"/>
+	<link rel="shortcut icon" type="image/jpg" href="/notes-app/assets/ic_delete.svg" />
 	<link rel="stylesheet" href="./styles/css/styles.css">
 </head>
 
 <body>
 	<div class="app">
-		<header class="app-header">
+		<header class="app-header app-header--edit">
 			<h1 class="app-header__title">Notes App</h1>
+			<span class="app-header__text">To save changes just hit "Save & Back"</span>
 			<button class="app-header__button">
 				<a class="app-header__link" href="/index.html">
 					<img src="./assets/arrow-left.svg" alt="arrow back" class="app-header__icon">
-					Back
+					Save & Back
 				</a>
 			</button>
 		</header>
@@ -27,7 +29,7 @@
 					<input class="app-content__note-name" id="note-title" placeholder="Note title">
 
 					<label for="note-body" class="app-content__note-label">Description</label>
-					<textarea class="app-content__note-body"id="note-body" placeholder="Enter note text"></textarea>
+					<textarea class="app-content__note-body" id="note-body" placeholder="Enter note text"></textarea>
 
 					<span class="app-content__status">
 						<span class="app-content__status-text" id="last-edited"></span>
@@ -39,10 +41,10 @@
 		</main>
 
 	</div>
-	
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment-with-locales.min.js"></script>
 	<script src="./notes-functions.js"></script>
-	<script src="./notes-edit.js" ></script>
+	<script src="./notes-edit.js"></script>
 </body>
 
 </html>
