--- a/edit.html
+++ b/edit.html
@@ -13,7 +13,7 @@
 			<h1 class="app-header__title">Notes App</h1>
 			<span class="app-header__text">To save changes just hit "Save & Back"</span>
 			<button class="app-header__button">
-				<a class="app-header__link" href="/index.html">
+				<a class="app-header__link" href="/notes-app/index.html">
 					<img src="./assets/arrow-left.svg" alt="arrow back" class="app-header__icon">
 					Save & Back
 				</a>
